--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Road Delivery Game</title>
+  <title>Road Delivery Challenge</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -10,3 +10,4 @@
   <script src="game.js"></script>
 </body>
 </html>
+
